fix: add stroke to logo for legibility

--- a/components/Logo/Logo.module.css
+++ b/components/Logo/Logo.module.css
@@ -9,6 +9,8 @@
     left: 0;
     right: 0;
     text-align: center;
+    -webkit-text-stroke: 1px gold; 
+
 }
 
 .logo:hover {
