--- a/components/MainNav/MainNav.module.css
+++ b/components/MainNav/MainNav.module.css
@@ -21,6 +21,8 @@
     font-size: 2rem;
     top: 1rem;
     right: 1rem;
+    cursor: pointer;
+
 }
 
 .button :hover {
